<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundClear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="190dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo_alt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_bold"
            android:gravity="center"
            android:text="@string/complete_registration"
            android:textColor="@color/colorSecondary"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/please"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nexa_regular"
            android:gravity="center"
            android:text="@string/please_complete_the_informations"
            android:textColor="@color/darker_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/textPrimary"
            app:boxBackgroundColor="@color/background"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_pets"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aboutTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/birthdate"
            android:textColor="@color/textPrimary" />

        <DatePicker
            android:id="@+id/birthdateDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/background"
            android:calendarTextColor="@color/colorPrimary"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/textPrimary" />

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/category"
            android:textColor="@color/textPrimary" />

        <RadioGroup
            android:id="@+id/categoryRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dogRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/dog" />

            <RadioButton
                android:id="@+id/catRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/cat" />

            <RadioButton
                android:id="@+id/horseRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/horse" />

        </RadioGroup>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>